--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "main": "index.js",
   "dependencies": {
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "bootstrap-vue": "^2.21.2",
     "bulma": "^0.9.1",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
