--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "sweetalert2": "^10.13.3",
     "vue": "^2.6.12",
     "vue-carousel": "^0.18.0",
     "vue-router": "^3.2.0",
