--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "sweetalert2": "^10.13.3",
     "vue": "^2.6.11",
     "vue-debounce": "^2.6.0",
     "vue-router": "^3.2.0",
+    "vue-sweetalert2": "^4.1.1",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
