--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,11 @@ node_modules
 .env.local
 .env.*.local
 
+# firebase
+.firebase/
+.firebaserc
+firebase.json
+
 # Log files
 npm-debug.log*
 yarn-debug.log*
