--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
+    "start": "vue-cli-service serve --open",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "main": "index.js",
@@ -17,7 +18,7 @@
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
-    "mdbvue": "^6.7.2",
+    "mdbvue": "6.7.2",
     "vue": "^2.6.12",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
@@ -39,6 +40,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.32.5",
     "sass-loader": "^10.1.1",
+    "vue-cli-plugin-mdb": "~2.1.0",
     "vue-template-compiler": "^2.6.11"
   },
   "_id": "ecommerce-client-customer@1.0.0",
