--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue-carousel": "^0.18.0",
     "vue-router": "^3.2.0",
     "vue-sweetalert2": "^4.1.1",
+    "vue-toast-notification": "^0.6.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
