--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "sweetalert2": "^10.13.3",
     "vue": "^2.6.11",
     "vue-numeric-input": "^1.0.6",
     "vue-router": "^3.2.0",
