--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "sweetalert2": "^10.13.3",
     "vue": "^2.6.11",
     "vue-feather-icons": "^5.1.0",
+    "vue-google-signin-button-directive": "^1.0.3",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
