--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.5",
     "jquery": "^3.5.1",
     "popper": "^1.0.1",
+    "sweetalert": "^2.1.2",
     "vue": "^2.6.12",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
